FlightPath 6.x Changelog
========================

2022-01-17
  Added ability to change site logo (in system settings).
  

2022-01-16
  Changed the 404 error to log as "page_not_found" type, instead of "system", as it shows up quite a bit in the logs and can be
  difficult to sift through for valid system messages.
  
  Updated Lassie message to show time in site's default timezone.
  

2022-01-15
  Fixed bug where degrees, groups, and courses not in school 0 were showing up (and causing problems) when the schools
  module was turned off.  Changed the logic so that when schools module is not enabled, we will only be shown school=0.

  Added "date" as element type for form api.
  
  Added new hook to user module, allowing us to change the display value of a user attribute.
  
  Tweaked function to "balance" the profile items on a page.


2022-01-13
  Minor edit: cleared up wording for mass sms permission.
  
  Fixed bug where mass txt was not possible except for admin user because
  we were checking the wrong permission.
  
  Small change to fp_space_csv function, to reduce double-spaces.
  
  Fixed bug in course search edit, where it was not showing terms correctly based on school_id.
  
  Added extra message to schools module.
  
  Added ability to have user editable attributes for other users.  Must set permission. See user.api.php for help
  on how to "register" these custom attributes.
  

2022-01-12
  Added ability to register and edit user attributes from the student profile page.  Saves automatically to the user_attributes table.  Created user.api.php
  to help illustrate how the hook works.
  
  The user module also automatically adds permissions for new attributes.
  
  Added a convenience function to help "balance" the profile_items array between leftside and rightside, so we can easily "push" items onto it and
  they automatically fall into place.
  

2022-01-10